# DCNN-Research

./: .gitignore  README.md  main.py  pyproject.toml  run_config.json
src/: __init__.py
src/models/: __init__.py  mnist_model.py
src/pipeline/: __init__.py  benchmark.py  test.py  train.py
src/utils/: __init__.py  data.py
